--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -59,13 +59,13 @@ function clearText(field)
                 <ul>
                     <li><a href="/location/">Ceremony/Reception</a></li>
                     <li><a href="/wedding_party/">Our Wedding Party</a></li>
-                    <li><a href="#" class="last">After Party</a></li>
+                    <li><a href="/afterparty/" class="last">After Party</a></li>
                 </ul>
               </li>
               <li><a href="#" class='header_link'>Guest Info</a>
                 <ul>
                     <li><a href="/map/">Map</a></li>
-                    <li><a href="#" class="last">Lodging</a></li>
+                    <li><a href="/lodging/ß" class="last">Lodging</a></li>
                 </ul>
               </li>
               <li><a href="/guestbook/">Guestbook</a></li>
