--- a/mainsite/templates/weddingparty.html
+++ b/mainsite/templates/weddingparty.html
@@ -4,18 +4,18 @@
 {% block content %}
 <div id="templatemo_middle">
 
-   <div id="middle_img"><img class="middle_img" src="/static/images//paul_jason_3babies2.jpg" alt="image" /><span></span></div>
+ <div id="middle_img"><img class="middle_img" src="/static/images//paul_jason_3babies2.jpg" alt="image" /><span></span></div>
 
-   <div id="m_right">
-       <h1>Our Wedding Party</h1>
-       <p>We wouldn't be able to do this without the support of some of our closest friends and family, who are regretting agreeing to this more every day.</p>
+ <div id="m_right">
+     <h1>Our Wedding Party</h1>
+     <p>We wouldn't be able to do this without the support of some of our closest friends and family, who are regretting agreeing to this more every day.</p>
 
-   </div>
+ </div>
 
 </div>
 
 <div id="templatemo_content">
- <div id="wedding_party_container">
+   <div id="wedding_party_container">
 
     <div class='wedding_party_row'>
         <div class='wedding_party_row_contents'>
@@ -23,18 +23,20 @@
                 The Officiant
             </div>
             <div class='wedding_party_member'>
-             <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+               <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                 <div class="flipper">
                     <div class="front">
                         <div class="party_image"><img src="/static/images/wedding_party/ursula_whitehair.jpg" alt="ursula with white hair" /></div>
                     </div>
                     <div class="back">
-                        <div class="party_text">Ursula and Paul met at Rutgers where she introduced him to the wonder that is twenty-seven.  Now she lives in DC with her kittens, and specializes in constructing cathouses that travel through time and space.</div>
+                        <div class="party_text_container">
 
+                            <div class="party_text"><span class='first_letter'>U</span>rsula and Paul met at Rutgers where she introduced him to the wonder that is twenty-seven.  Now she lives in DC with her kittens, and specializes in constructing cathouses that travel through time and space.</div>
+                        </div>
                     </div>
                 </div>
             </div>
-                    <div class="party_name">Ursula Miller the XXVII<br>Creative Director</div>
+            <div class="party_name">Ursula Miller the XXVII<br>Creative Director</div>
         </div>
     </div>
 </div>
@@ -55,28 +57,31 @@
                         <div class="party_image"><img src="/static/images/wedding_party/minardi_pretty.jpg" alt="He's so pretty." /></div>
                     </div>
                     <div class="back">
-                        <div class="party_text">One of Paul and Jason's closest friends, Minardi is also the meanest.  Expect him to judge you and make snide comments about all aspects of the wedding.  That's why we love him.</div>
-
+                        <div class="party_text_container">
+                            <div class="party_text"><span class='first_letter'>O</span>ne of Paul and Jason's closest friends, Minardi is also the meanest.  Expect him to judge you and make snide comments about all aspects of the wedding.  That's why we love him.</div>
+                        </div>
                     </div>
                 </div>
             </div>
-                    <div class="party_name">Minardi<br>Princess DaintyPants</div>
+            <div class="party_name">Minardi<br>Princess DaintyPants</div>
         </div>  
         <div class='wedding_party_member'>
             <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                 <div class="flipper">
                     <div class="front">
-                       <div class="party_image"><img src="/static/images/wedding_party/matt_funnyface.jpg" alt="the best picture of Matt we could find" /></div>
-                    </div>
-                    <div class="back">
-                         <div class="party_text">Matt is like a brother to Paul, mostly due to the fact that he is.</div>
+                     <div class="party_image"><img src="/static/images/wedding_party/matt_funnyface.jpg" alt="the best picture of Matt we could find" /></div>
+                 </div>
+                 <div class="back">
+                    <div class="party_text_container">
 
-                    </div>
-                </div>
-            </div>
-                    <div class="party_name">Matt Angrisani<br>VP of Awesome</div>
-        </div>  
-    </div>
+                       <div class="party_text"><span class='first_letter'>M</span>att is like a brother to Paul, mostly due to the fact that he is.</div>
+                   </div>
+               </div>
+           </div>
+       </div>
+       <div class="party_name">Matt Angrisani<br>VP of Awesome</div>
+   </div>  
+</div>
 </div>
 <div class='wedding_party_row'>
     <div class='wedding_party_row_contents'>
@@ -90,28 +95,32 @@
                         <div class="party_image"><img src="/static/images/wedding_party/megan_italy.jpg" alt="Megan in Italy" /></div>
                     </div>
                     <div class="back">
-                       <div class="party_text">Megan went to both high school and college with Paul, yet somehow that wasn't enough for her to run screaming. Now Paul and Jason are relying on her to bring the smackdown on any wedding vendor that doesn't do what he or she is supposed to.  (Seriously, don't cross Megan.) </div>
+                        <div class="party_text_container">
 
+                         <div class="party_text"><span class='first_letter'>M</span>egan went to both high school and college with Paul, yet somehow that wasn't enough for her to run screaming. Now Paul and Jason are relying on her to bring the smackdown on any wedding vendor that doesn't do what he or she is supposed to.  (Seriously, don't cross Megan.) </div>
+                     </div>
+                 </div>
+             </div>
+         </div>
+         <div class="party_name">Megan Muttberts<br>The Chief Justice</div>
+     </div>   
+     <div class='wedding_party_member'>
+        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+            <div class="flipper">
+                <div class="front">
+                    <div class="party_image"><img src="/static/images/wedding_party/kate.jpg" alt="kate-upo" /></div>
+                </div>
+                <div class="back">
+                    <div class="party_text_container">
+
+                        <div class="party_text"><span class='first_letter'>I</span>t's no exaggeration to say Kate was Paul's first real friend, who he probably wouldn't have survived high school without.  Now, after <span class='strikeout'>19</span> <span class='strikeout'>11</span> <span class='strikeout'>15</span> none-of-your-business years, she remains one of Paul's closest (and craziest) friends.  </div>
                     </div>
                 </div>
             </div>
-                    <div class="party_name">Megan Muttberts<br>The Chief Justice</div>
-        </div>   
-        <div class='wedding_party_member'>
-            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-                <div class="flipper">
-                    <div class="front">
-                        <div class="party_image"><img src="/static/images/wedding_party/kate.jpg" alt="kate-upo" /></div>
-                    </div>
-                    <div class="back">
-                        <div class="party_text">It's no exaggeration to say Kate was Paul's first real friend, who he probably wouldn't have survived high school without.  Now, after <span class='strikeout'>19</span> <span class='strikeout'>11</span> <span class='strikeout'>15</span> none-of-your-business years, she remains one of Paul's closest (and craziest) friends.  </div>
-
-                    </div>
-                </div>
-            </div>
-                    <div class="party_name">Kate Zwaard<br>Chief Science Officer</div>
-        </div>  
-    </div>
+        </div>
+        <div class="party_name">Kate Zwaard<br>Chief Science Officer</div>
+    </div>  
+</div>
 </div>
 <div class='wedding_party_row'>
     <div class='wedding_party_row_contents'>
@@ -122,12 +131,14 @@
                         <div class="party_image"><img src="/static/images/wedding_party/frank_goggles.jpg" alt="Frank going for a swim" /></div>
                     </div>
                     <div class="back">
-                        <div class="party_text">Frank is Jason's brother-in-law, and father to the three adorable monkeys below. Paul and Jason included him in the wedding not just because he's important to them, but also because they figure there will be lots of opportunities to make him uncomfortable.</div>
+                        <div class="party_text_container">
 
+                            <div class="party_text"><span class='first_letter'>F</span>rank is Jason's brother-in-law, and father to the three adorable monkeys below. Paul and Jason included him in the wedding not just because he's important to them, but also because they figure there will be lots of opportunities to make him uncomfortable.</div>
+                        </div>
                     </div>
                 </div>
             </div>
-                    <div class="party_name">Frank DiLorenzo<br>Consultant of Epicness</div>
+            <div class="party_name">Frank DiLorenzo<br>Consultant of Epicness</div>
         </div>   
         <div class='wedding_party_member'>
             <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
@@ -136,12 +147,14 @@
                         <div class="party_image"><img src="/static/images/wedding_party/steve_hanging.jpg" alt="Steve hanging around" /></div>
                     </div>
                     <div class="back">
-                        <div class="party_text">Steve is Jason's cousin.  We're not really sure what's going on in this picture, but have learned not ask questions.</div>
+                        <div class="party_text_container">
 
+                            <div class="party_text"><span class='first_letter'>S</span>teve is Jason's cousin.  We're not really sure what's going on in this picture, but have learned not ask questions.</div>
+                        </div>
                     </div>
                 </div>
             </div>
-                    <div class="party_name">Steve Hopkins<br>Senior Rockstar Extraordinaire</div>
+            <div class="party_name">Steve Hopkins<br>Senior Rockstar Extraordinaire</div>
         </div>  
     </div>
 </div> 
@@ -155,18 +168,20 @@
     <div class='wedding_party_row'>
 
         <div class='wedding_party_member'>
-         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+           <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
                 <div class="front">
                     <div class="party_image"><img src="/static/images/wedding_party/sophia_climbing.jpg" alt="Sophia climbing the wall" /></div>
                 </div>
                 <div class="back">
-                    <div class="party_text">She's both beautiful and brilliant, and the whole wedding is really just an excuse for her to get dolled up and tell people what to do.</div>
+                    <div class="party_text_container">
 
+                        <div class="party_text"><span class='first_letter'>S</span>he's both beautiful and brilliant, and the whole wedding is really just an excuse for her to get dolled up and tell people what to do.</div>
+                    </div>
                 </div>
             </div>
         </div>
-                <div class="party_name">Sophia DiLorenzo<br>Queen of All Things, Jr.</div>
+        <div class="party_name">Sophia DiLorenzo<br>Queen of All Things, Jr.</div>
     </div>  
     <div class='wedding_party_member'>
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
@@ -175,26 +190,30 @@
                     <div class="party_image"><img src="/static/images/wedding_party/jack_bicycle.jpg" alt="jack_on_bike" /></div>
                 </div>
                 <div class="back">
-                    <div class="party_text">Jack is pretty tough.  With an older sister to keep up with and a baby brother to look after, he barely has time for his plans of world domination.</div>
+                    <div class="party_text_container">
 
+                        <div class="party_text"><span class='first_letter'>J</span>ack is pretty tough.  With an older sister to keep up with and a baby brother to look after, he barely has time for his plans of world domination.</div>
+                    </div>
                 </div>
             </div>
         </div>
-                <div class="party_name">Jackson DiLorenzo<br>Evil Genius</div>
+        <div class="party_name">Jackson DiLorenzo<br>Evil Genius</div>
     </div>  
     <div class='wedding_party_member'>
-     <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+       <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
         <div class="flipper">
             <div class="front">
                 <div class="party_image"><img src="/static/images/wedding_party/jacob_chocolate.jpg" alt="Jacob covered in chocolate." /></div>
             </div>
             <div class="back">
-                <div class="party_text">Don't let those chubby cheeks fool you.  This kid is ten pounds of kickass in a five-pound diaper.</div>
+                <div class="party_text_container">
 
+                    <div class="party_text"><span class='first_letter'>D</span>on't let those chubby cheeks fool you.  This kid is ten pounds of kickass in a five-pound diaper.</div>
+                </div>
             </div>
         </div>
     </div>
-            <div class="party_name">Jacob DiLorenzo<br>Sergeant-At-Arms</div>
+    <div class="party_name">Jacob DiLorenzo<br>Sergeant-At-Arms</div>
 </div>  
 </div>
 </div>          
