--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -65,7 +65,7 @@ function clearText(field)
               <li><a href="#" class='header_link'>Guest Info</a>
                 <ul>
                     <li><a href="/map/">Map</a></li>
-                    <li><a href="/lodging/ß" class="last">Lodging</a></li>
+                    <li><a href="/lodging/" class="last">Lodging</a></li>
                 </ul>
               </li>
               <li><a href="/guestbook/">Guestbook</a></li>
