--- a/mainsite/static/css/templatemo_style.css
+++ b/mainsite/static/css/templatemo_style.css
@@ -440,21 +440,24 @@ padding:2px;t
 	}
 
 	.message_sender{
-
+		font-size: 14px
 	}
 
 	.message_date{
 		float: right;
+		font-size: 14px
 	}
 
 	.message_body{
 		padding: 15px;
 		font-weight: bold;
+		font-size: 16px
 	}
 
 	.message_response{
 		padding-left: 50px;
 		font-style: italic;
+		font-size: 14px
 	}
 
 	#guest_submit {
