--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -174,8 +174,8 @@ function clearText(field)
     {% endblock %}
      <div id="templatemo_footer">
     
-        Copyright © 2013 <a href="https://github.com/pnichols104/wedding-website">Built by Paul Nichols</a> | 
-        Designed by <a href="http://www.templatemo.com/page/1" target="_parent">CSS Templates</a>
+        <a href="https://github.com/pnichols104/wedding-website">Built by Paul Nichols</a>
+        
     
     </div> <!-- end of templatemo_footer -->
     
