--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -174,7 +174,7 @@ function clearText(field)
     {% endblock %}
      <div id="templatemo_footer">
     
-        <a href="https://github.com/pnichols104/wedding-website">Built by Paul Nichols</a>
+        <a href="https://github.com/pnichols104/wedding-website">Built by Paul Nichols</a> with Django 
         
     
     </div> <!-- end of templatemo_footer -->
