added link to high scores

--- a/mainsite/static/css/templatemo_style.css
+++ b/mainsite/static/css/templatemo_style.css
@@ -392,6 +392,7 @@ padding:2px;t
 			font-size: 18px;
 			width: 100px;
 			padding-bottom: 10px;
+			text-align: center;
 		}
 
 		#high_scores td{
