--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -51,6 +51,7 @@ function clearText(field)
               <li><a href="#">About Us</a>
                 <ul>
                     <li><a href="/quiz/" >Quiz</a></li>
+                    <li><a href="/high_scores/" >High Scores</a></li>
                     <li><a href="/photos/">Photos</a></li>
                     <li><a href="/story/" class="last">Our Story</a></li>
                 </ul>
