--- a/mainsite/static/css/templatemo_style.css
+++ b/mainsite/static/css/templatemo_style.css
@@ -370,6 +370,10 @@ padding:2px;t
 			font-size: 14px;
 			text-align: center;
 		}
+
+		#no_name{
+			text-align: left;
+		}
 		.result_message{
 			font-size: 14px;
 			font-style: italic;
@@ -662,136 +666,138 @@ label {
 
 /* entire container, keeps perspective */
 .flip-container {
-    margin: 20px 26px 32px 26px; /* customized rule */
-    -webkit-perspective: 1000;
-       -moz-perspective: 1000;
-            perspective: 1000;
+	perspective: 1000;
 }
 /* flip the pane when hovered */
-.flip-container:hover .flipper, 
-.flip-container.hover .flipper {
-    -webkit-transform: rotateY(180deg);
-       -moz-transform: rotateY(180deg);
-            transform: rotateY(180deg);
+.flip-container:hover .flipper, .flip-container.hover .flipper {
+	transform: rotateY(180deg);
 }
 
-.flip-container, 
-.front, 
-.back {
-    /*width: 320px;
-    height: 480px;*/
-    width: 240px; /* customized rule */
-    height: 240px; /* customized rule */
+.flip-container, .front, .back {
+	width: 320px;
+	height: 480px;
+	margin: 10px 0 10px 0;
+
 }
 
 /* flip speed goes here */
 .flipper {
-    -webkit-transition: 0.6s;
-       -moz-transition: 0.6s;
-            transition: 0.6s;
-    -webkit-transform: perspective(1000px);
-       -moz-transform: perspective(1000px);
-            transform: perspective(1000px);
-    -webkit-transform-style: preserve-3d;
-       -moz-transform-style: preserve-3d;
-            transform-style: preserve-3d;
+	transition: 0.6s;
+	transform-style: preserve-3d;
 
-    position: relative;
+	position: relative;
 }
 
 /* hide back of pane during swap */
-.front, 
-.back {
-    -webkit-backface-visibility: hidden;
-       -moz-backface-visibility: hidden;
-            backface-visibility: hidden;
+.front, .back {
+	backface-visibility: hidden;
 
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin: 10px 0 10px 0;
-    -webkit-box-shadow:
-    0px 0px 0px 2px rgba(0,0,0,0.6),
-    0px 0px 0px 14px #fff,
-    0px 0px 0px 18px rgba(0,0,0,0.2),
-    6px 6px 8px 17px #555;
+	position: absolute;
+	top: 0;
+	left: 0;
+	-webkit-box-shadow:
+	0px 0px 0px 2px rgba(0,0,0,0.6),
+	0px 0px 0px 14px #fff,
+	0px 0px 0px 18px rgba(0,0,0,0.2),
+	6px 6px 8px 17px #555;
 
-    -moz-box-shadow:
-    0px 0px 0px 2px rgba(0,0,0,0.6),
-    0px 0px 0px 14px #fff,
-    0px 0px 0px 18px rgba(0,0,0,0.2),
-    6px 6px 8px 17px #555;
-    /*! Volker_E Don't include -moz-box-shadow any more if you don't explicitely want to support Fx 3.6, see https://developer.mozilla.org/en-US/docs/Web/CSS/box-shadow */
+	-moz-box-shadow:
+	0px 0px 0px 2px rgba(0,0,0,0.6),
+	0px 0px 0px 14px #fff,
+	0px 0px 0px 18px rgba(0,0,0,0.2),
+	6px 6px 8px 17px #555;
 
-    box-shadow:
-    0px 0px 0px 2px rgba(0,0,0,0.6),
-    0px 0px 0px 14px #fff,
-    0px 0px 0px 18px rgba(0,0,0,0.2),
-    6px 6px 8px 17px #555;
-    /*! Volker_E: get rid of the unit when values are '0'. So '0' instead of '0px'. */
+	box-shadow:
+	0px 0px 0px 2px rgba(0,0,0,0.6),
+	0px 0px 0px 14px #fff,
+	0px 0px 0px 18px rgba(0,0,0,0.2),
+	6px 6px 8px 17px #555;
 }
 
 /* front pane, placed above back */
 .front {
-    z-index: 2;
+	z-index: 2;
 }
 
 /* back, initially hidden pane */
 .back {
-    background-color: #9CF; /* customized rule; ! Volker_E: use short hex notation here as well */
-    -webkit-transform: rotateY(180deg);
-       -moz-transform: rotateY(180deg);
-            transform: rotateY(180deg);
+	transform: rotateY(180deg);
+	background-color: #99CCFF;
 }
 
+.flip-container {
+	-webkit-perspective: 1000;
+	-moz-perspective: 1000;
+	-o-perspective: 1000;
+	perspective: 1000;
+	margin: 20px 26px 32px 26px;
+}
+
+.flip-container, .front, .back {
+	width: 240px;
+	height: 240px;
+}
+
+.flipper {
+	-moz-transform: perspective(1000px);
+	-moz-transform-style: preserve-3d;
+
+	position: relative;
+}
+
+.front, .back {
+	-webkit-backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
+	-o-backface-visibility: hidden;
+	backface-visibility: hidden;
+
+	-webkit-transition: 0.6s;
+	-webkit-transform-style: preserve-3d;
+
+	-moz-transition: 0.6s;
+	-moz-transform-style: preserve-3d;
+
+	-o-transition: 0.6s;
+	-o-transform-style: preserve-3d;
+
+	-ms-transition: 0.6s;
+	-ms-transform-style: preserve-3d;
+
+	transition: 0.6s;
+	transform-style: preserve-3d;
 
 
-/*.front, 
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
 .back {
-
-    -webkit-transition: 0.6s;
-    -webkit-transform-style: preserve-3d;
-
-    -moz-transition: 0.6s;
-    -moz-transform-style: preserve-3d;
-
-    -o-transition: 0.6s;
-    -o-transform-style: preserve-3d;
-
-    -ms-transition: 0.6s;
-    -ms-transform-style: preserve-3d;
-
-    transition: 0.6s;
-    transform-style: preserve-3d;
-
-    position: absolute;
-    top: 0;
-    left: 0;
+	-webkit-transform: rotateY(-180deg);
+	-moz-transform: rotateY(-180deg);
+	-o-transform: rotateY(-180deg);
+	-ms-transform: rotateY(-180deg);
+	transform: rotateY(-180deg);
 }
 
-.back {
-    -webkit-transform: rotateY(-180deg);
-    -moz-transform: rotateY(-180deg);
-    -ms-transform: rotateY(-180deg);
-    -o-transform: rotateY(-180deg);
-    transform: rotateY(-180deg);
+.flip-container:hover .back, .flip-container.hover .back {
+	-webkit-transform: rotateY(0deg);
+	-moz-transform: rotateY(0deg);
+	-o-transform: rotateY(0deg);
+	-ms-transform: rotateY(0deg);
+	transform: rotateY(0deg);
 }
 
-.flip-container:hover .back, 
-.flip-container.hover .back {
-    -webkit-transform: rotateY(0deg);
-    -moz-transform: rotateY(0deg);
-    -o-transform: rotateY(0deg);
-    -ms-transform: rotateY(0deg);
-    transform: rotateY(0deg);
+.flip-container:hover .front, .flip-container.hover .front {
+	-webkit-transform: rotateY(180deg);
+	-moz-transform: rotateY(180deg);
+	-o-transform: rotateY(180deg);
+	transform: rotateY(180deg);
 }
 
-.flip-container:hover .front, 
-.flip-container.hover .front {
-    -webkit-transform: rotateY(180deg);
-    -moz-transform: rotateY(180deg);
-    -o-transform: rotateY(180deg);
-    transform: rotateY(180deg);
-}*/
+
+.front {
+	z-index: 2;
+}
 
 #tba {width: 850px; height: auto;}
