--- a/mainsite/static/css/templatemo_style.css
+++ b/mainsite/static/css/templatemo_style.css
@@ -673,6 +673,7 @@ label {
 .flip-container:hover .flipper, 
 .flip-container.hover .flipper {
     -moz-transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
     transform: rotateY(180deg);
 }
 
@@ -687,8 +688,10 @@ label {
 /* flip speed goes here */
 .flipper {
     -moz-transition: 0.6s;
+    -webkit-transition: 0.6s;
     transition: 0.6s;
     -moz-transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
 
     position: relative;
