--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -95,8 +95,8 @@ function clearText(field)
     	<div id="middle_img"><img class="middle_img" src="static/images/paul_licking_jason.jpg" alt="image" /><span></span></div>
         
         <div id="m_right">
-	        <h1>Welcome to our Wedding Site!{{answer}}</h1>
-            <p>We are both so happyffff that you can share our day with us as we settle for each other.  We are going to have a super-fun weekend with lots of fun and surprises along the way!   Or die trying.</p>
+	        <h1>Welcome to our Wedding Site!</h1>
+            <p>We are both so happy that you can share our day with us as we settle for each other.  We are going to have a super-fun weekend with lots of fun and surprises along the way!   Or die trying.</p>
 		</div>
     
     </div>
