converted to south, put in anti-spam on guestbook

--- a/mainsite/templates/guestbook.html
+++ b/mainsite/templates/guestbook.html
@@ -29,6 +29,7 @@
           <div class="form-group">
 
             <textarea class='form-control' id="guest_message" name="message" placeholder='Message' rows='5'/></textarea>
+            <input type="text" class='form-control' id="spam_catcher" name="spam_catcher"/>
           </div>
           <input type="submit"/>
         </form>
