--- a/quiz/templates/high_scores.html
+++ b/quiz/templates/high_scores.html
@@ -4,8 +4,12 @@
   {% block content %}
     <div id="templatemo_middle">
     
-    	<div id="middle_img"><iframe width="285" height="186" src="//www.youtube.com/embed/HrLEQmMrRFw?rel=0&start=4&showinfo=0&modestbranding=1" frameborder="0" allowfullscreen></iframe></div>
-        
+    	<!-- <div id="middle_img"><iframe width="285" height="186" src="//www.youtube.com/embed/HrLEQmMrRFw?rel=0&start=4&showinfo=0&modestbranding=1" frameborder="0" allowfullscreen></iframe></div> -->
+        <div id='middle_img' >
+          <video width="285" height="186" controls>
+            <source src='/static/videos/rumple.mp4' type="video/mp4">
+            Your browser can't play videos.  Seriously, get <a href="https://www.google.com/intl/en/chrome/browser">Chrome</a>.
+        </div>
         <div id="m_right">
 	        <h1>See who knows us best!</h1>
             <p>And who is dead to us.</p>
