tiny change to test whether I remember how to push to heroku

--- a/mainsite/templates/guestbook.html
+++ b/mainsite/templates/guestbook.html
@@ -7,7 +7,7 @@
     	<div id="middle_img"><img class="middle_img" src="/static/images/paul_jason_moochie.jpg" alt="Gross" /></div>
         
         <div id="m_right">
-	        <h1 class='guestbook_title'>Our Guestbook</h1>
+	        <h1 class='guestbook_title'>Sign Our Guestbook</h1>
             <p class='guestbook_title'>Tell us how wonderful we are!</p>  
             <p class='guestbook_title'>It's OK, we don't get tired of hearing it.</p>
           	
