--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -35,6 +35,7 @@ function clearText(field)
     });
 </script>
 {% load user_agents %}
+{% load facebook %}
 </head>
 <body>
 
@@ -83,7 +84,7 @@ function clearText(field)
         </ul>   
         
         <div class="cleaner"></div>
-        
+        {% facebook_button %}
     </div> <!-- end of templatemo_menu -->
   
 
