--- a/mainsite/templates/map.html
+++ b/mainsite/templates/map.html
@@ -16,7 +16,7 @@
     <div id="templatemo_content">
 
 <div id='map_container'>
-<iframe id='map' width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps/ms?msa=0&amp;msid=210828373645680600634.0004e6746f4e8e989f476&amp;ie=UTF8&amp;t=m&amp;ll=41.44916,-73.980904&amp;spn=0.045034,0.072956&amp;z=13&amp;output=embed"></iframe><br /><small>View <a href="https://maps.google.com/maps/ms?msa=0&amp;msid=210828373645680600634.0004e6746f4e8e989f476&amp;ie=UTF8&amp;t=m&amp;ll=41.44916,-73.980904&amp;spn=0.045034,0.072956&amp;z=13&amp;source=embed" style="color:#0000FF;text-align:left">Jason and Paul's Wedding</a> in a larger map</small>
+<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/ms?msa=0&amp;msid=210828373645680600634.0004e6746f4e8e989f476&amp;hl=en&amp;ie=UTF8&amp;t=m&amp;ll=40.14004,-74.09008&amp;spn=0.045931,0.072956&amp;z=13&amp;output=embed"></iframe><br /><small>View <a href="https://www.google.com/maps/ms?msa=0&amp;msid=210828373645680600634.0004e6746f4e8e989f476&amp;hl=en&amp;ie=UTF8&amp;t=m&amp;ll=40.14004,-74.09008&amp;spn=0.045931,0.072956&amp;z=13&amp;source=embed" style="color:#0000FF;text-align:left">Jason and Paul's Wedding</a> in a larger map</small>
 </div>
         <div class="cleaner"></div>
       </div>
