updated lodging and location text

--- a/mainsite/templates/lodging.html
+++ b/mainsite/templates/lodging.html
@@ -8,7 +8,7 @@
         <div id="m_right">
           <h1 class='guestbook_title'>TBA</h1>
             <p class='guestbook_title'>This section to be completed when it's finished.</p> 
-            
+            <p>(Seriously, stop whining.  We're going as fast as we can.  We're trying to save you people money.  We'll have this up by 8/5 at the latest!)</p>
             
         </div>
     
