--- a/mainsite/templates/location.html
+++ b/mainsite/templates/location.html
@@ -16,7 +16,7 @@
     
     <div id="templatemo_content">
     <h4>Our big day is September 27th, 2014 at 3:00pm!</h4>
-    <h4>The ceremony and reception will be at <a href='http://www.swbanquets.com/'>South Wall Banquet Hall</a> in Wall Township, NJ.  The site is fully handicapped-accessible and can be reached by taking the NJ Transit to the Manasquan Station.  We will probably provide a shuttle from the train station to the ceremony or hotel or something, but we might just make you walk for our own amusement.  It's up in the air. Note:  Google is <span class="italic">wrong</span> about the directions and adds an hour that's not really there.  We will post the easiest mass transit.  When we get to it.</h4>  </h3>I really don't know what else to say about this.  Someone <a href="mailto:paulandjason27@gmail.com" target="_blank" >ask us a question</a> so I can beef this up with something relevant.</h3>
+    <h4>The ceremony and reception will be at <a href='http://www.swbanquets.com/'>South Wall Banquet Hall</a> in Wall Township, NJ.  The site is fully handicapped-accessible and can be reached by taking the NJ Transit to the Manasquan Station.  We will probably provide a shuttle from the train station to the ceremony or hotel or something, but we might just make you walk for our own amusement.  It's up in the air. Note:  Google is <span class="italic">wrong</span> about the directions and adds an hour that's not really there.  We will post the easiest mass transit.  When we get to it.</h4> 
     	<div class="cleaner"></div>
     </div>
     <div id="templatemo_content_bottom"></div>
