--- a/mainsite/templates/base.html
+++ b/mainsite/templates/base.html
@@ -73,6 +73,7 @@ function clearText(field)
               </li>
               <li><a href="#" class='header_link'>Guest Info</a>
                 <ul>
+                    <li><a href="/faq/">FAQ</a></li>
                     <li><a href="/map/">Map</a></li>
                     <li><a href="/lodging/" class="last">Lodging</a></li>
                 </ul>
@@ -130,7 +131,7 @@ function clearText(field)
         </div>
         <br><br>
 
-        <div id='welcome'>Have fun looking around what is arguably the best wedding website ever created.  Take the <a href="/quiz/" >quiz</a> to see how well you know Jason and Paul.  Look through the <a href="/photos/">photo album</a> and marvel at those handsome devils.  Be sure to leave a message on the <a href="/guestbook/">guestbook</a> proclaiming your love and devotion for the boys!</div>
+        <div id='welcome'>Have fun looking around what is arguably the best wedding website ever created.  Take the <a href="/quiz/" >quiz</a> to see how well you know Jason and Paul.  Look through the <a href="/photos/">photo album</a> and marvel at those handsome devils.  Be sure to leave a message on the <a href="/guestbook/">guestbook</a> proclaiming your love and devotion for the boys! And brand new addition!  Check out our <a href="/faq/">FAQ</a> rather than annoying us!</div>
  
     	<div class="cleaner"></div>
     </div>
