--- a/mainsite/templates/faq.html
+++ b/mainsite/templates/faq.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="answer">
-        A:  So, take a look at the envelope your invitation came in.  Do you see who it's addressed to?  That's who's invited.  I'm sorry we didn't make that clearer.  
+        A:  So, take a look at the envelope your invitation came in.  Do you see who it's addressed to?  That's who's invited.  We'd love to invite everyone, but weddings cost mad stacks, yo.  
     </div>
 
     <div class="question">
