--- a/mainsite/templates/afterparty.html
+++ b/mainsite/templates/afterparty.html
@@ -6,8 +6,8 @@
     	<div id="middle_img"><img class="middle_img" src="/static/images/paul_jason_moochie.jpg" alt="Gross" /></div>
         
         <div id="m_right">
-	        <h1 class='guestbook_title'>TBA</h1>
-            <p class='guestbook_title'>This section to be completed when it's finished.</p>  
+	        <h1 class='guestbook_title'>It comes before Part B</h1>
+
             
           	
 		    </div>
@@ -15,9 +15,8 @@
     </div>
     <div id="templatemo_content">
 
-<div id='map_container'>
-<img id='tba' src='/static/images/tba.png' alt='TBA'>
-</div>
+<div id='after_party'>
+  <h4>Please join us for the after-party beginning at 9PM until upside-down question-mark at the Colts Neck Inn (your rooms are upstairs.  Look how convenient!).</h4>
         <div class="cleaner"></div>
       </div>
       <div id="templatemo_content_bottom"></div>
