--- a/mainsite/templates/lodging.html
+++ b/mainsite/templates/lodging.html
@@ -6,18 +6,17 @@
       <div id="middle_img"><img class="middle_img" src="/static/images/paul_jason_moochie.jpg" alt="Gross" /></div>
         
         <div id="m_right">
-          <h1 class='guestbook_title'>TBA</h1>
-            <p class='guestbook_title'>This section to be completed when it's finished.</p> 
-            <p>(Seriously, stop whining.  We're going as fast as we can.  We're trying to save you people money.  We'll have this up by 8/5 at the latest!)</p>
+          <h1 class='guestbook_title'>Lodging</h1>
+            
+            <p class='guestbook_title'>You can sleep here.</p>
             
         </div>
     
     </div>
     <div id="templatemo_content">
-
-<div id='map_container'>
-<img id='tba' src='/static/images/tba.png' alt='TBA'>
-</div>
+      <h4>Guests can stay at the <a href='http://www.coltsneckinnhotel.com/'> Colts Neck Inn Hotel</a>, chosen for its 27-inch television screens.</h4>
+      <h4>Call (732) 409-1200 and tell them you're with the Wiener Wedding.  Rooms are limited, so book early and often.</h4>
+      <h4>Shuttle service will be provided from the train station to the hotel on the day of the wedding (probably) and between the wedding venue and the hotel before and after the event.</h4>
         <div class="cleaner"></div>
       </div>
       <div id="templatemo_content_bottom"></div>
