--- a/mainsite/templates/lodging.html
+++ b/mainsite/templates/lodging.html
@@ -3,7 +3,7 @@
 
     <div id="templatemo_middle">
     
-      <div id="middle_img"><img class="middle_img" src="/static/images/paul_jason_moochie.jpg" alt="Gross" /></div>
+      <div id="middle_img"><img class="middle_img" src="/static/images/paul_and_jason_new_years.jpg" alt="image" /></div>
         
         <div id="m_right">
           <h1 class='guestbook_title'>Lodging</h1>
@@ -14,7 +14,7 @@
     
     </div>
     <div id="templatemo_content">
-      <h4>Guests can stay at the <a href='http://www.coltsneckinnhotel.com/'> Colts Neck Inn Hotel</a>, chosen for its 27-inch television screens.</h4>
+      <h4>Guests can stay at the <a href='http://www.coltsneckinnhotel.com/'>Colts Neck Inn Hotel</a>, chosen for its 27-inch television screens. (Yay 27!)</h4>
       <h4>Call (732) 409-1200 and tell them you're with the Wiener Wedding.  Rooms are limited, so book early and often.</h4>
       <h4>Shuttle service will be provided from the train station to the hotel on the day of the wedding (probably) and between the wedding venue and the hotel before and after the event.</h4>
         <div class="cleaner"></div>
