changed lodging and registries

--- a/mainsite/templates/lodging.html
+++ b/mainsite/templates/lodging.html
@@ -14,8 +14,7 @@
     
     </div>
     <div id="templatemo_content">
-      <h4>Guests can stay at the <a href='http://www.coltsneckinnhotel.com/'> Colts Neck Inn Hotel</a>, chosen for its 27-inch television screens.</h4>
-      <h4>Call (732) 409-1200 and tell them you're with the Wiener Wedding.  Rooms are limited, so book early and often.</h4>
+      <h4>We are temporarily having trouble with our hotel.  We apologize for the inconvenience, but we promise it's been a lot more stressful for us than for you.  We will have details by Friday, August 15.  Promise.</h4>
       <h4>Shuttle service will be provided from the train station to the hotel on the day of the wedding (probably) and between the wedding venue and the hotel before and after the event.</h4>
         <div class="cleaner"></div>
       </div>
