--- a/mainsite/templates/faq.html
+++ b/mainsite/templates/faq.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="answer">
-        A:  We will be registering at Bed Bath and Beyond and Target as of August 10th.  
+        A:  At <a href="http://www.amazon.com/registry/wedding/22XRWCXMQGXA1">Amazon</a> and <a href="http://www1.macys.com/registry/wedding/guest/?registryId=2202207">Macy's</a>.
     </div>
 
     <div class="question">
